monitoring/elasticsearch/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: kap-elasticsearch
  namespace: elastic-system
  annotations:
    nginx.ingress.kubernetes.io/backend-protocol: "HTTPS"
    cert-manager.io/cluster-issuer: kap-vault-issuer
    cert-manager.io/common-name: elasticsearch.dev.local
    cert-manager.io/private-key-algorithm: "ECDSA"
spec:
  ingressClassName: nginx
  rules:
  - host: elasticsearch.dev.local
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: kap-elastic-es-http
            port:
              number: 9200
  tls:
  - hosts:
    - elasticsearch.dev.local
    secretName: elasticsearch-cert
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: kap-kibana
  namespace: elastic-system
  annotations:
    nginx.ingress.kubernetes.io/backend-protocol: "HTTPS"
    cert-manager.io/cluster-issuer: kap-vault-issuer
    cert-manager.io/common-name: kibana.dev.local
    cert-manager.io/private-key-algorithm: "ECDSA"
spec:
  ingressClassName: nginx
  rules:
  - host: kibana.dev.local
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: kap-elastic-kb-http
            port:
              number: 5601
  tls:
  - hosts:
    - kibana.dev.local
    secretName: kibana-cert
